--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: deer-flow-backend
+    expose:
+      - "8000"
     env_file:
       - .env
     volumes:
@@ -19,6 +21,8 @@ services:
       args:
         - NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
     container_name: deer-flow-frontend
+    expose:
+      - "3000"
     env_file:
       - .env
     depends_on:
